--- a/index.html
+++ b/index.html
@@ -1,10 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./style.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <title>Document</title>
+</head>
+<body>
+
+  <div class="smal-card">
+    <h1><i class='bx bx-car'></i>Free Shipping From $500.00</h1>
+    <h1><i class='bx bx-phone'></i>Support 24/7 At Anytime</h1>
+    <h1><i class='bx bxl-paypal' ></i>Secure Payment Totally Safe</h1>
+    <h1><i class='bx bxs-party'></i>Latest Offer Upto 20% off</h1>
+  </div>
+
+  <div class="flex">
+    <div class="but">
+      <h1>Company</h1>
+      <ul>
+        <li><a href="#">About Us</a></li>
+      </ul>
+
+      <ul>
+        <li>
+          <a href="#">Fish & Meat</a>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <a href="#">Dashboard</a>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <a href="#">987 Andre Plain Suite High Street 838,</a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="but">
+      <h1>Top Category</h1>
+      <ul>
+        <li><a href="#">Contact us</a></li>
+      </ul>
+
+      <ul>
+        <li>
+          <a href="#">Soft drinks</a>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <a href="#">My Orders</a>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <a href="#">Lake Hestertown, USA</a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="but">
+      <h1>My Account</h1>
+      <ul>
+        <li>
+          <a href="#">Careers</a>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <a href="#">Baby Care</a>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <a href="#">Recent Orders</a>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <a href="#">Tell: 02.356.1666</a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="but">
+      <img src="./logo-color.svg" alt="">
+      <ul>
+        <li>
+          <a href="#">Latest news</a>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <a href="#">Beauty & Health</a>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <a href="#">Updated Profile</a>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <a href="#">Email: ccruidk@test.com</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="ilov">
+    <div class="ilovalar">
+      <h1>Follow us</h1>
+      <div class="ilovala">
+        <i class='bx bxl-facebook'></i> 
+        <i class='bx bxl-twitter' ></i>
+        <i class='bx bxl-pinterest-alt'></i>
+        <i class='bx bxl-linkedin'></i>
+        <i class='bx bxl-telegram'></i>
+      </div>
+    </div>
+
+    <div class="cell">
+      <h1>Call Us Today! <br> <span>+012345-67900</span></h1>
+    </div>
+
+    <div class="Payment">
+      <img src="./payment-logo.webp" alt="">
+    </div>
+  </div>
+
+  <div class="texts">
+    <h1>Copyright 2022 <a href="#">@ HtmlLover</a>, All rights reserved.</h1>
+  </div
+
+
+</body>
+
 </html>
